Fix a z-index bug on plant detail page.

--- a/pvsz-web/src/components/About.css
+++ b/pvsz-web/src/components/About.css
@@ -20,6 +20,8 @@
 .navbar_style {
     padding-left: 5%;
     padding-top: 5%;
+    position: absolute;
+    z-index: 1;
 }
 
 main h1 {
