--- a/pvsz-web/src/components/PlantDetail.css
+++ b/pvsz-web/src/components/PlantDetail.css
@@ -39,7 +39,7 @@
     .plantNameTitle {
         font-family: "Tamil MN";
         margin-left: 5%;
-        margin-top: 5vh;
+        margin-top: 8vh;
         font-size: 9vw;
         font-weight: 200;
         color: #FFFFFF;
@@ -100,7 +100,7 @@
     .plantNameTitle {
         font-family: "Tamil MN";
         margin-left: 5%;
-        margin-top: 5vh;
+        margin-top: 8vh;
         font-size: 7vw;
         font-weight: 200;
         color: #FFFFFF;
